--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="container-fluid bg-dark  py-2">
+        <div class="container-fluid bg-dark py-2">
             <div class="container">
                 <h2>List Top One Hundred - Best Albums on iTunes </h2>
             </div>
@@ -25,14 +25,15 @@
         <section>
             <div class="container">
                 <div class="row ">
-                    <div class="col-8  bg-white place1 mt-3  animated fadeIn">
-                        <div>
+                    <div class=" list col-8  bg-white place1 mt-3  animated fadeIn">
+                        <div >
                             <h3 class=" mt-2 text-dark"> List of the best albums based on iTunes !</h3>
-                            <p id="Titles_place" class="text-dark"></p>
-                            <div class="img-tumbnail" id="Photo_place"></div>
+                            <div id="Titles_place" class="text-dark"></div> 
+                                <!-- <div id="Photo_place"></div>  -->
+                                                      
                         </div>
                     </div>
-                    <div class="col-4 float-right mt-3 bg-dark text-white">
+                    <div class=" menu col-4 float-right mt-3 bg-dark text-white ">
                         <h2>List - click for check !</h2>
                         <div class="dropdown-divider"></div><br>
                         <div id="Titles_place1"></div>
