--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="container-fluid bg-dark py-2">
+        <div class="container-fluid bg-dark py-2 navback">
             <div class="container">
                 <h2>List Top One Hundred - Best Albums on iTunes </h2>
             </div>
@@ -23,17 +23,18 @@
     </header>
     <main>
         <section>
-            <div class="container">
-                <div class="row ">
-                    <div class=" list col-8  bg-white place1 mt-3  animated fadeIn">
-                        <div >
+            <div class="container ">
+                <div class="row mt-3 shadow">
+                    <div class=" list col-8  bg-white place1 animated fadeIn ">
+                        <div>
                             <h3 class=" mt-2 text-dark"> List of the best albums based on iTunes !</h3>
-                            <div id="Titles_place" class="text-dark"></div> 
-                                <!-- <div id="Photo_place"></div>  -->
-                                                      
+                            <div>
+                                <div id="Titles_place" class="text-dark ">
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class=" menu col-4 float-right mt-3 bg-dark text-white ">
+                    <div class=" menu col-4 float-right  bg-dark text-white ">
                         <h2>List - click for check !</h2>
                         <div class="dropdown-divider"></div><br>
                         <div id="Titles_place1"></div>
