--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/mdb.min.css">
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -25,16 +26,17 @@
         <section>
             <div class="container ">
                 <div class="row mt-3 shadow">
-                    <div class=" list col-8  bg-white place1 animated fadeIn ">
-                        <div>
-                            <h3 class=" mt-2 text-dark"> List of the best albums based on iTunes !</h3>
+                    <div class=" list col-md-8  bg-gray place1 col-sm-12 ">
+                        <div class="col-12">
+                            <h3 class=" mt-2 text-dark text-center">List of the best albums based on iTunes ! </h3>
+                            <div class="dropdown-divider"></div>
                             <div>
                                 <div id="Titles_place" class="text-dark ">
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class=" menu col-4 float-right  bg-dark text-white ">
+                    <div class=" menu col-4 float-right bg-dark text-white ">
                         <h2>List - click for check !</h2>
                         <div class="dropdown-divider"></div><br>
                         <div id="Titles_place1"></div>
